typescript/checker/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            36,
        ),
        hi: BytePos(
            37,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts:4:5
  |
4 | var b: number;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            51,
        ),
        hi: BytePos(
            52,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts:5:5
  |
5 | var c: E;
  |     ^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts
  --> $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts:10:1
   |
10 | x1 **= c;
   | ^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            121,
        ),
        hi: BytePos(
            130,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts:12:8
   |
12 | x1 **= undefined;
   |        ^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            137,
        ),
        hi: BytePos(
            139,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts:14:5
   |
14 | var x2: number;
   |     ^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts
  --> $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts:17:1
   |
17 | x2 **= c;
   | ^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            199,
        ),
        hi: BytePos(
            208,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts:19:8
   |
19 | x2 **= undefined;
   |        ^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            215,
        ),
        hi: BytePos(
            217,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts:21:5
   |
21 | var x3: E;
   |     ^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts
  --> $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts:24:1
   |
24 | x3 **= c;
   | ^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            272,
        ),
        hi: BytePos(
            281,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts:26:8
   |
26 | x3 **= undefined;
   |        ^^^^^^^^^

